--- a/Lehm.mw
+++ b/Lehm.mw
@@ -29,7 +29,7 @@ Udes sündutadud vaza om 18..45 kg vedutte, 60 kilogrammhasai harvoin. Suguiden 
 
 Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan pord om 280−320 päiväd vodes. Lehm andab maidon kaikiš surembad lugumärad videnden-kudenden laktacijan aigan, kaik oleleb 9..12 laktacijad elos. Kaikiš enamba levitadud mail'mas golštiniž-frizijan sugun lehm voib antta maidon 10 tuhad litroid vodes, erasti 30 tuhazesai. Lehmäd golliš maiš (Indii, Afrik) anttas maidon vaiše läz üht tuhad litroid vodes — bräd täudub vazan kazvatandan täht. Lehmän igä voib sadas 35 vodhesai harvoin, no 20 vot keskmäras. Kävutadas ižanduses 12..13 vodhesai, 5..10 vot äikerdoičendan täht.
 
-== Lehmiden tipiden vepsän nimed ==
+== Lehmiden toižendoiden vepsän nimed ==
 * ''Ajelnus lehm'' — zavodinu kantta lehm.
 * ''Kuhmoi'' — sar'vitoi lehm.
 * ''Loukoi'' — vaugedpäine lehm.
@@ -39,10 +39,10 @@ Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan p
 * ''Sorokpälehm'' — lehm kirjavan pänke.
 * ''Tineh'' — kandai lehm.
 
-== Lehmähä sidotud vepsän tärtused ==
+== Lehmähä sidodud vepsän tärtused ==
 * ''Läbläk'' — lehmän here.
 
-== Lehmähä sidotud vepsän muštatišed da ozoitesed ==
+== Lehmähä sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
@@ -56,6 +56,7 @@ Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan p
 === Ozoitesed ===
 <blockquote>
 Lehm seižub tanhal, sar'ved irdal (päč lämptäb).<br />
+Märg vaza aidan taga (kel' sus).<br />
 Nell' sizart kustas ühthe vädrha (lehmän lüpstas).
 </blockquote>
 
