/* Vihmha sidotud vepsän muštatišed */ +

--- a/Vihm.mw
+++ b/Vihm.mw
@@ -18,6 +18,7 @@ Muiktad vihmad oma regionaline problem, paneb jändusid čudegišpäi vihmaks se
 == Vihmha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Keväz'vihm kazvatab, sügüz'vihm kadotab.''
+* ''Märg vihmad ei varaida.''
 * ''Vihmub — ka ed kel'dä, i vihmda ed käske.''
 </blockquote>
 
