/* Vihmha sidotud vepsän muštatišed */

--- a/Vihm.mw
+++ b/Vihm.mw
@@ -15,7 +15,7 @@ Vihman muiktusenmär voib olda alemba himižen tegimišton, metallurgijan da toi
 
 Muiktad vihmad oma regionaline problem, paneb jändusid čudegišpäi vihmaks severziš-se kümniš kilometrid tegimišpäi raduisanke. Ku veden muiktuzmär pH 5,5, ka vezišton pohjan ližakahad bakterijad pölištudas. Konz muiktusenmär sase pH 4,5 znamoičendad, ka kaik kala surmičese, mugažo mavezižiden živatoiden da gavediden tobj pala.
 
-== Vihmha sidotud vepsän muštatišed ==
+== Vihmha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Keväz'vihm kazvatab, sügüz'vihm kadotab.''
 * ''Märg vihmad ei varaida.''
