--- a/Sobad.mw
+++ b/Sobad.mw
@@ -87,6 +87,11 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 | 54
 |}
 
+== Sobihe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Pen' Makaraine kaikid sobitab (negl).''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Rahvahansädod]]
 * [[Modaižed sobad]]
