--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -18,6 +18,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kand sädota, ka mugažo čoma linneb.''
 * ''Lop om čoma, ka i kaik om čoma.''
+* ''Neiččen ezmäine oza — čoma roža.''
 * ''Sigä om čoma, kus meid ei ole.''
 * ''Sö kromaine, ka linned priha čomaine.''
 * ''Väges ed čomenzu.''
