--- a/Oza.mw
+++ b/Oza.mw
@@ -6,7 +6,8 @@ Nened disciplinad tedoitas ozan fenomenad: [[psihologii]], [[filosofii]], [[fizi
 
 Ozan problem oli antižen [[etik]]an keskuzline kategorii. [[Aristotel']] tedoiži sidä ezmäižel i märiči ozad kuti «hengen töhišt täudes hüvädtegendas» ([[Nikomahan etik]]-tö). Hüvädtegend oli se, mi vedab ozannoks.
 
-== Ozha sidotud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
+== Ozha sidotud vepsän muštatišed ==
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Igä elämata, oza tedmata.''
 * ''Kaikuččel kozal om ičeze oza.''
