--- a/Jumal.mw
+++ b/Jumal.mw
@@ -6,7 +6,8 @@
 
 Kaiked mail'madme 60..90% täuz'igäšt ristitištod uskotas Jumalha.
 
-== Jumalha sidodud vepsän muštatišed<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lp. 38. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref> ==
+== Jumalha sidodud vepsän muštatišed ==
+Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi meles, se i keles. Vepsläižed muštatišed (ladii om O. J. Žukova). — Petroskoi: «Periodika», 2018. — 96 lp. — Lpp. 31−33. ISBN 978-5-88170-307-3 {{ref-vep}} {{ref-ru}}</ref>
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Jumal ei käske edelpäi teta.''
