*Empty MediaWiki Message*

--- a/Italijan_kel'.mw
+++ b/Italijan_kel'.mw
@@ -1,5 +1,5 @@
 {{10000}}{{A10000}}
-[[Fail:Map Italophone World.png|thumb|right|300px|Italijan kelen leviganduz mail'mas]]
+[[Fail:Linguistic map of the Italian language.svg|thumb|right|300px|Italijan kelen leviganduz mail'mas]]
 '''Italijan kel' ''' (ičeze nimitused: ''italiano, lingua italiana'') mülüb [[indoevropižed keled|indoevropižhe kel'kundha]] (romanine jouk, italiž-romanine alajouk). Se om valdkundkel' [[Italii|Italijas]], [[San Marino]]s, [[Vatikan]]as, [[Šveicarii|Šveicarijas]] da [[Evropan Ühtištuz|EÜ:n]] aluzkundoiš. Pagižijoiden lugu om läz 70 mln ristituid.<ref>Simone, 2010.</ref>
 
 Reguliruindorganzacii om Akademii della Kruska (''Accademia della Crusca'', [[Florencii]], vspäi 1583).
