*Empty MediaWiki Message*

--- a/Slovakan_kel'.mw
+++ b/Slovakan_kel'.mw
@@ -1,4 +1,4 @@
-[[Fail:Idioma eslovaco.PNG|thumb|right|250px|Slovakan kelen levigandusen kart.]]
+[[Fail:Map of Slovak language.svg|thumb|right|250px|Slovakan kelen levigandusen kart.]]
 '''Slovakan kel'''' (ičeze nimitused: ''slovenčina'', ''slovenský jazyk'', ''slovenská reč'') om [[Slovakii|Slovakijan]] oficialine kel'. Mugažo se om [[Evropan Ühtištuz|EÜ:n]] üks' oficialižiš kelišpäi.
 
 Slovakan kel' om [[indoevropižed keled|indoevropine]], [[slavižed keled|slavine]] kel'. Pagižijoiden lugu om 5,2 millionad ristituid (2015), heišpäi nell' videndest elädas Slovakijas. Koume paginoiden joukud: päivnouzmaine, keskuzline, päivlaskmaine. Paginoiden erazvuiččend sündui mägitahondan arvoimižiš. [[Čehan kel']] oli kirjankeleks 18. voz'sadhasai. Slovakan kirjankel' om sätud i kodificiruidud 19. voz'sadan keskes keskpaginoiden alusel.
