*Empty MediaWiki Message*

--- a/Azerbaidžanan_kel'.mw
+++ b/Azerbaidžanan_kel'.mw
@@ -1,5 +1,5 @@
 {{10000}}{{A10000}}
-[[Fail:Idioma azerí.png|thumb|right|250px|Azerbaidžanan kelen levigandusen kart]]
+[[Fail:Map of the Azerbaijani language.svg|thumb|right|250px|Azerbaidžanan kelen levigandusen kart]]
 '''Azerbaidžanan kel'''' (ičeze nimituz: ''Azərbaycan dili'') om üks' [[türkižed keled|türkižiš kelišpäi]].
 
 Se om [[Azerbaidžan]]an valdkundkel'. Pagižijoiden lugu om 25..30 millionad ristituid. Üks' regionaližiš kelišpäi [[Dagestan]]as (Venäma). Äi [[azerbaidžanlaižed|azerbaidžanlaižid]] elädas [[Iran]]an i [[Gruzii|Gruzijan]] lähižiš agjoiš, [[Turkanma|Turcijan]] i [[Venäma]]n järedoiš lidnoiš.
