--- a/Barbadosan_flag.mw
+++ b/Barbadosan_flag.mw
@@ -1,9 +1,9 @@
 [[Fail:Flag of Barbados.svg|border|right|250px]]
-'''Barbadosan flag''' ({{lang-en|Flag of Barbados}}) om [[Barbados]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1966]]-nden voden 30. päiväl kül'mkud. Flagan proporcii om ''2:3''.
+'''Barbadosan flag''' ({{lang-en|Flag of Barbados}}) om [[Barbados]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1966]]-nden voden 30. päiväl kül'mkud. Flagan proporcii om ''2:3''. Dizainan tegii om Grantli U. Preskod (''Grantley W. Prescod''), hänen variant om valitud ohjastusel konkursan läz tuhas taričendaspäi.
 
 Oigedsaumaine tera kogoneb koumes püštoiktas tazostadud šoiduspäi sinižen, pakuižen i möst sinižen mujun. [[Poseidon]]an (hän-žo [[Neptun (jumal)|Neptun]]-jumal rimalaižes mifologijas) koumešorpuine hang vardeta kuvadase keskuses.
 
-Sinine muju simvolizuruib mert, pakuine — letet. Hang ozutab valdkundan koloniališt endišt Surenke Britanijanke («meriden valdoičijanke»).
+Sinine muju simvolizuruib mert, pakuine — letet. Hang ozutab ohjandusen «rahvahaspäi, rahvahanke, rahvahan täht»-formulad, mugažo koukeroičeb valdkundan kolonialižhe enččehe Surenke Britanijanke («meriden valdoičijanke»).
 
 == Kacu mugažo ==
 * [[Barbadosan valdkundznam]]
