--- a/Barbadosan_flag.mw
+++ b/Barbadosan_flag.mw
@@ -1,4 +1,5 @@
 [[Fail:Flag of Barbados.svg|border|right|250px]]
+[[Fail:Naval Ensign of Barbados.svg|thumb|right|250px|Flagan variant laivoiden täht, proporcii 1:2]]
 '''Barbadosan flag''' ({{lang-en|Flag of Barbados}}) om [[Barbados]]-valdkundan üks' oficialižiš simvolišpäi. Se om vahvištadud [[1966]]-nden voden 30. päiväl kül'mkud. Flagan proporcii om ''2:3''. Dizainan tegii om Grantli U. Preskod (''Grantley W. Prescod''), hänen variant om valitud ohjastusel konkursan läz tuhas taričendaspäi.
 
 Oigedsaumaine tera kogoneb koumes püštoiktas tazostadud šoiduspäi sinižen, pakuižen i möst sinižen mujun. [[Poseidon]]an (hän-žo [[Neptun (jumal)|Neptun]]-jumal rimalaižes mifologijas) koumešorpuine hang vardeta kuvadase keskuses.
