*Empty MediaWiki Message*

--- a/Lids.mw
+++ b/Lids.mw
@@ -1,7 +1,7 @@
 {{10000}}{{A10000}}
 {{Eländpunkt
  | Nimi = Lids<br />Leeds
- | Lidnanznam = Leeds Bridge arms MF.jpg
+ | Lidnanznam = Coat of arms of Leeds.svg
  | Flag = Flag of Leeds Utd 3D.png
  | Lidnanznam text = Lidsan lidnanznam
  | Flag text = Lidsan flag
