--- a/Leo_Klaudio.mw
+++ b/Leo_Klaudio.mw
@@ -1,5 +1,9 @@
 {{Personalii}}
-'''Klaudio Leo''' ({{lang-it|Claudio Leo}}; sünd. [[1. kül'mku]] [[1972]], [[Čel'je Messapik]], [[Italii]] — kol. [[17. viluku]] [[2013]], [[Milan]], [[Italii]]) oli italijalaine gitarist [[Cayne]]-gruppas, [[Lacuna Coil]]:an enzne ühtnii.
+'''Klaudio Leo''' ({{lang-it|Claudio Leo}}; sünd. [[1. kül'mku]] [[1972]], [[Čel'je Messapik]], [[Italii]] — kol. [[17. viluku]] [[2013]], [[Milan]], [[Italii]]) oli italine gitarist.
+
+Muzikant zavodi kar'jerad vl 1994. [[Lacuna Coil]]-muzikgruppan üks' alusenpanijoišpäi, ühtni sihe vspäi 1994 vhesai 1998. Hän pani gotikmetalan [[Cayne]]-gruppan alust vl 1999, vändi siš surmhasai i pästi koume al'bomad.
+
+Mez' koli edel aigad, rak-läžundaspäi.
 
 == Homaičendad ==
 <references/>
