--- a/.fr.mw
+++ b/.fr.mw
@@ -1,11 +1,18 @@
 '''.fr''' om [[Francii|Francijan]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 2. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/fr.html IANA — .fr Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registracii om lasktud kahtendel tazopindal, mugažo koumandel tazopindal kahtenden tazopindan domenoiden röunadusidenke. Francijan rezidentoile (juridižed organizacijad i fizižed personad) sab olda domennimen valdoičijan vaiše, niiden ližaks rahvahidenkeskeižile organizacijoile.
+
+Sab kävutada latinan kirjamišton ližakirjamid domennimes.
+
+Francijan joga merentagaine territorii om ičeze ühtenden tazopindan domenanke.
+
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
 * [http://www.afnic.fr/ Domenan sait — «Association Française pour le Nommage Internet en Coopération (A.F.N.I.C.)» (''afnic.fr'' vai ''nic.fr'').] {{ref-fr}} {{ref-en}}
 * [http://iana.org/domains/root/db/fr.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.fr}}
 
 {{CcTLD}}
 
