--- a/.fr.mw
+++ b/.fr.mw
@@ -1,4 +1,5 @@
-'''.fr''' om [[Francii|Francijan]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 2. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/fr.html IANA — .fr Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+[[Fail:Domaine .fr logo.svg|thumb|right|250px|Domenan logotip]]
+'''.fr''' om [[Francii|Francijan]] [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 2. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/fr.html IANA — .fr Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domennimiden lugu oli enamba mi 3,5 mln vn 2020 sügüz'kus.
 
 Registracii om lasktud kahtendel tazopindal, mugažo koumandel tazopindal kahtenden tazopindan domenoiden röunadusidenke. Francijan rezidentoile (juridižed organizacijad i fizižed personad) sab olda domennimen valdoičijan vaiše, niiden ližaks rahvahidenkeskeižile organizacijoile.
 
