--- a/.fr.mw
+++ b/.fr.mw
@@ -3,7 +3,7 @@
 
 Registracii om lasktud kahtendel tazopindal, mugažo koumandel tazopindal kahtenden tazopindan domenoiden röunadusidenke. Francijan rezidentoile (juridižed organizacijad i fizižed personad) sab olda domennimen valdoičijan vaiše, niiden ližaks rahvahidenkeskeižile organizacijoile.
 
-Sab kävutada latinan kirjamišton ližakirjamid domennimes.
+Sab kävutada latinan kirjamišton nenid ližakirjamid domennimes: à, á, â, ã, ä, å, æ, ç, è, é, ê, ë, ì, í, î, ï, ñ, ò, ó, ô, õ, ö, oe, ù, ú, û, ü, ý, ÿ, ß.
 
 Francijan joga merentagaine territorii om ičeze ühtenden tazopindan domenanke.
 
