+ galerei, +hom, aktualizacii

--- a/Taig_(lidn).mw
+++ b/Taig_(lidn).mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Taig<br />Тайга
- | Lidnanznam = Taiga coat of arms.png
- | Flag =
+ | Lidnanznam = Taiga COA (2020).jpg
+ | Flag = Flag of Tayga.png
  | Lidnanznam text = Taigan lidnanznam
- | Flag text =
+ | Flag text = Taigan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 24,183
- | Voz' = 2017
+ | Eläjiden lugu = 22,619
+ | Voz' = 2021
  | Pind =
  | Fail = Tayga Railway Station.jpg
  | Pämez' = Mihail Teremeckii<br />(tal'vku 2017—)
@@ -14,7 +14,7 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Taig''' ({{lang-ru|Тайга}}) om [[Venäma]]n lidn da raudtesol'm [[Kemerovon agj]]an lodehes. Se om Taigan lidnümbrikon administrativine keskuz (vspäi 2005).
+'''Taig''' ({{lang-ru|Тайга́}}) om [[Venäma]]n lidn da raudtesol'm [[Kemerovon agj]]an lodehes. Se om Taigan lidnümbrikon administrativine keskuz (vspäi 2005).
 
 == Istorii ==
 Eländpunktan aluz om pandud sokhaze tahondha vl 1896 kuti ''Tomsk-Tajožnii-žilo'' sauvomha da holitamha [[Transsib]]-raudted da sen sarakod [[Tomsk]]hasai. Žilo šingotihe teravas, saudihe nell' pühäpertid i ristitišt saihe 10 tuhazesai, kätihe Tomskan gubernijan lidnaks nügüdläiženke nimenke vn 1911 27. päiväl vilukud. Vll 1925−1943 mülüi Novosibirskan agjaha lidnaks agjan alištusenke.
@@ -27,9 +27,20 @@ Lidn sijadase Jai-jogen hural randpolel ({{lang-ru|Яя}}, [[Čulim (Obin ližaj
 Kaks' žilod da koume elänzoittud raudtesarad mülüdas lidnümbrikho Taigan ližaks. Lidnümbrikon pind — 553,44 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 25 331 ristitud, lidnümbrikon — 27 424 ristitud. Kaikiš suremb lidnan ristitišt oli 33 860 eläjid vl 1959. Vl 2018 kaik 25 363 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 25 331 ristitud, lidnümbrikon — 27 424 ristitud. Kaikiš suremb lidnan ristitišt oli 33 860 eläjid vl 1959. Vl 2018 kaik 25 363 ristitud elihe lidnümbrikos.
 
-Teiden tehnine škol i Taigan raudtetransportan institut (mülüb Omskan ühtenzoituzteiden valdkundaližhe universitetha) oma professionaližen opendusen aluzkundoikš.
+Teiden tehnine škol i Taigan raudtetransportan institut<ref>[http://tigt.site/ Taigan raudtetransportan institutan sait (''tigt.site'').] {{ref-ru}}</ref> (mülüb Omskan ühtenzoituzteiden valdkundaližhe universitetha) oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tayga water tower.jpg|Vezičuhunduz (2011)
+Лавка купца Мангазова в Рождество 02.jpg|Istorine Mangazov-torgovanan lauk vn 2010 tal'vkus
+П36-0192, Россия, Кемеровская область, станция Тайга (Trainpix 194673).jpg|P36-klassan puruvedim-muštnik (2012)
+088 Станция Тайга.JPG|Taig-päraudtestancii vl 2009
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://sndtgo.ru/ Lidnümbrikon Rahvahan Ezitajiden Nevondkundan oficialine sait (''sndtgo.ru'').] {{ref-ru}}
