--- a/Taštagol.mw
+++ b/Taštagol.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Taštagol<br />Таштагол
- | Lidnanznam = Coat of arms of Tastagol.png
+ | Lidnanznam = Tashtagol COA (1998).gif
  | Flag =
  | Lidnanznam text = Taštagolan lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 23,107
- | Voz' = 2017
+ | Eläjiden lugu = 22,647
+ | Voz' = 2021
  | Pind = 79
  | Fail = Tashtagol - view on Ust-Shalym microdistrict from tv-tower.jpg
  | Pämez' = Aleksei Putincev<br />(reduku 2010—)
@@ -14,7 +14,7 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Taštagol''' ({{lang-ru|Таштагол}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an suves. Se om [[Taštagolan rajon]]an administrativine keskuz, mülüb sihe vspäi 2005.
+'''Taštagol''' ({{lang-ru|Таштаго́л}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an suves. Se om [[Taštagolan rajon]]an administrativine keskuz, mülüb sihe vspäi 2005.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1939 žiloks [[raud|raudkivendon]] löudmižsijanno. Vl 1963 ühtištuihe Taštagol-, Kočur- ({{lang-ru|Кочура}}) i Šalim-žiloid, anttihe lidnan statusad.
@@ -27,15 +27,23 @@ Lidn sijadase Kondom-jogen muugotil randoil ({{lang-ru|Кондома}}, [[Ob' (
 Taštagol om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 23 134 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli 28 tuh. eläjid vl 1967. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jurgii-vägestusenkandajan jumalanpert' i [[šorijalaižed|šorijalaižiden]] etnografine muzei oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 23 134 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli 28 tuh. eläjid vl 1967.
 
-Taštagolan kaivuztehnologijoiden da holitusen sferan tehnikum om professionaližen opendusen aluzkundaks.<ref>[http://www.spo-tgt.ru/ Taštagolan tehnikuman sait (''spo-tgt.ru'').] {{ref-ru}}</ref>
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jurgii-vägestusenkandajan päjumalanpert'<ref>[http://sobory.ru/geo/locat/14871 Taštagolan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om saudud vll 1992−2002) i časoun' oma olmas lidnas. [[Šorijalaižed|Šorijalaižiden]] etnografine muzei radab mugažo.
+
+Taštagolan kaivuztehnologijoiden da holitusen sferan tehnikum<ref>[http://www.spo-tgt.ru/ Taštagolan tehnikuman sait (''spo-tgt.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tashtagol church.JPG|Jurgii-vägestusenkandajan päjumalanpert', vn 2009 nägu
+Tashtagol station.JPG|Taštagol-päraudtestancii vl 2009
+</gallery>
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [http://atr.my1.ru/tash_gorod/Tashtagol/index.html Taštagolan lidnankundan tobmuden aluzkundoiden lehtpoled rajonan oficialižel ''atr.my1.ru''-saital.] {{ref-ru}}
+* [http://admtash.my1.ru/ Taštagolan lidnankundan tobmuden aluzkundoiden sait (''admtash.my1.ru'').] {{ref-ru}}
 {{Commons|Category:Tashtagol}}
 
 {{Kemerovon agjan lidnad}}
