/* Haragha sidotud vepsän muštatišed da ozoitesed */ +

--- a/Harag.mw
+++ b/Harag.mw
@@ -43,6 +43,7 @@ Elädas paroil. Valitas partnörad elon ezmäižel vodel, kandustaškatas kahten
 == Haragha sidotud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
+* ''Oza om ku haragan peza.'' (ei ole kaikenaigaine)
 * ''Ozaiteled haragole, a painad varišale.''
 * ''Saupta su, a se harag suhu lendab.''
 </blockquote>
