/* Varišha sidotud vepsän muštatišed */ +

--- a/Variš.mw
+++ b/Variš.mw
@@ -29,6 +29,7 @@ Eläb Evropas i Päivlaskmaižes Azijas, sinantropine erik. Hibj om hahk, pä, s
 == Varišha sidotud vepsän muštatišed ==
 <blockquote>
 * ''Kohtha vaiše variš lendab.''
+* ''Ozaiteled haragole, a painad varišale.''
 * ''Variš hüppib, a küksta ei voi.''
 * ''Variš varišale ei sil'mad n'oki.''
 </blockquote>
