/* Ozha sidotud vepsän muštatišed */ ližaduz

--- a/Oza.mw
+++ b/Oza.mw
@@ -21,7 +21,7 @@ Erased muštatišed oma ottud «Mi meles, se i keles»-kogodusespäi.<ref>Mi mel
 * ''Ozad lepkehe ed omble (Ed omble lepkehe tütrele ozad).''
 * ''Ozavale elo tuleb piluiš-ki läbi, a onetomal lähteb uksiš.''
 * ''Ozavale kaik om hüvä.''
-* ''Ozavale mehele kukoi-ki munib.''
+* ''Ozavale (mehele) kukoi-ki munib(, a ozatomale i kana ei muni).''
 * ''Rahvahal om oza, a minai ozaine.''
 * ''Ristitun näged, a ozad ed näge.''
 * ''Sinun oza völ kätkes magadab.''
