*Empty MediaWiki Message*

--- a/Kana.mw
+++ b/Kana.mw
@@ -30,12 +30,12 @@ Kana-erikon sugudimorfizm ozutase sel'ktas. Kana i kukoi oma harjanke päl, se o
 * ''Haudoi kana'' — haudui munid (poigaižid) kana.
 * ''Poikkana'' — nor' kana.
 
-== Kanaha sidotud vepsän tärtused ==
+== Kanaha sidodud vepsän tärtused ==
 * ''Kanankočk'' — čoga [[tanaz|tanhas]] kanoiden täht.
 * ''Kutk, kanankoda'' — sauvuz kanoid pidamha.
 * ''Tüku-tüku'' — sana kucumha kanoid.
 
-== Kanaha sidotud vepsän muštatišed da ozoitesed ==
+== Kanaha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Haudui kana, tegihe kukoi.''
