/* Tedoho sidodud vepsän muštatiž */ +

--- a/Tedo.mw
+++ b/Tedo.mw
@@ -14,8 +14,9 @@ Avar tedo mülütab töhišton kaikid arvoimižid da komponentid:
 * tärtusiden da kategorijoiden apparat;
 * informacijan kogodamižen, kaičendan da kävutandan sistem.
 
-== Tedoho sidodud vepsän muštatiž ==
+== Tedoho sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Keletoi kaikiš enamban tedab.''
 </blockquote>
 
