/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -9,6 +9,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 
 == Sanha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Ei sur' sana sud haugoi.''
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
