/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -16,6 +16,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Sanub, kuti haugol pähä iškeb.''
 * ''Sinun sana da jumalale korvha.''
 * ''Teravas sanutud, da ei teravas tehtud.''
+* ''Vähemba pagiže, enamban tedad.''
 * ''Äi sanoid, da vähä azjoid.''
 </blockquote>
 
