/* Tedoho sidodud vepsän muštatišed */ +

--- a/Tedo.mw
+++ b/Tedo.mw
@@ -18,6 +18,7 @@ Avar tedo mülütab töhišton kaikid arvoimižid da komponentid:
 <blockquote>
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Keletoi kaikiš enamban tedab.''
+* ''Vähemba pagiže, enamban tedad.''
 </blockquote>
 
 == Homaičendad ==
