*Empty MediaWiki Message*

--- a/Vul'gat.mw
+++ b/Vul'gat.mw
@@ -2,12 +2,12 @@
 [[Fail:Prologus Ioanni Vulgata Clementina.jpg|thumb|right|250px|[[Evangelii Joannan mödhe]], Klimentan redakcijan Vul'gat, 1922]]
 '''Vul'gat''' ({{lang-la|Biblia Vulgata}} «Ühthine Biblii») om [[Biblii|Biblijan]] latinankel'ne kändmuz [[Ieronim Stridonalaine|Ieronim Stridonalaižen]] töiden alusel. Se om [[katoline jumalankodikund|katoližen jumalankodikundan]] oficialine Biblii latinan kelel 16. voz'sadaspäi.
 
-Biblijan edeližed kändused nimitadas ''Vetus Latina'' (vanhad latinižed) i ''Itala''. Ünäižen Biblijan tarbhaižuz libui pühäkirjan äiluguižiden variantoiden tagut, joga käzikirjutai vajehti kirjad vähän.
+Biblijan edeližed kändused nimitadas ''Vetus Latina'' (vanhad latinižed) i ''Itala''. Ünäižen Biblijan tarbhaižuz libui pühäkirjan äiluguižiden variantoiden tagut, joga käzikirjutai vajehti kirjad vähäižin.
 
-Saksalaine [[Johann Gutenberg]]-tipograf pästi ezmäižeks kirjaks arni Vul'gatan tekstan vl 1456. Vul'gatan arvostelendan ezmäine kirj om pästtud Francijha Rober Etjenal vl 1528. [[Trento|Tridentan]] suiman aigan (1545−1563) Vul'gatan avtoritet om vahvištadud oficialižešti vl 1546, käskusenke sen pästandoiš ''quam datissime'' (toižin sanoin, petusita ku voib).
+Saksalaine [[Iogann Gutenberg]]-tipograf pästi ezmäižeks kirjaks arni Vul'gatan tekstan vl 1456. Vul'gatan arvostelendan ezmäine kirj om pästtud Francijha Rober Etjenal vl 1528. [[Trento|Tridentan]] suiman aigan (1545−1563) Vul'gatan avtoritet om vahvištadud oficialižešti vl 1546, käskusenke sen pästandoiš ''quam datissime'' (toižin sanoin, petusita ku voib).
 
 == Literatur ==
-* [http://www.thelatinlibrary.com/bible.html Vulgata] latinan kelel ''thelatinlibrary.com''-saital.
+* [http://www.thelatinlibrary.com/bible.html Vul'gat] latinan kelel ''thelatinlibrary.com''-saital.
 
 {{Commons|Category:Vulgate}}
 
