--- a/.se.mw
+++ b/.se.mw
@@ -1,4 +1,5 @@
-'''.se''' om [[Ročinma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 4. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/se.html IANA — .se Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+[[Fail:Dot-se-logo.svg|thumb|right|250px|Domenan logotip]]
+'''.se''' om [[Ročinma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 4. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/se.html IANA — .se Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domennimiden lugu ületi pol'tošt millionad vn 2021 uhokus.
 
 == Homaičendad ==
 <references />
@@ -6,6 +7,7 @@
 == Irdkosketused ==
 * [http://www.iis.se/ Domenan sait — «The Internet Infrastructure Foundation» (''iis.se'').] {{ref-sv}} {{ref-en}}
 * [http://iana.org/domains/root/db/se.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.se}}
 
 {{CcTLD}}
 
