--- a/.se.mw
+++ b/.se.mw
@@ -1,7 +1,7 @@
 [[Fail:Dot-se-logo.svg|thumb|right|250px|Domenan logotip]]
-'''.se''' om [[Ročinma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 4. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/se.html IANA — .se Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domennimiden lugu ületi pol'tošt millionad vn 2021 uhokus.
+'''.se''' om [[Ročinma]]n [[DNS|Internet-domen]]. Se om avaitud [[1986. voz'|1986]]-nden voden 4. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/se.html IANA — .se Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Domennimiden lugu oli enamba pol'tošt millionad vn 2021 uhokus.
 
-Edel 2003. vot oli kovid ohjandimid .se-zonas, al'ternativižed [[.nu]]- i [[.com]]-domenad saiba populärižust. Vn 2003 redukus registracijan ohjandimed kändihe joudjaližeks. Domennimen registracii om lasktud kahtendel tazopindal, no maksmine voib ühteks vodeks vaiše.
+Edel 2003. vot oli kovid ohjandimid .se-zonas, al'ternativižed [[.nu]]- i [[.com]]-domenad saiba populärižust. Vn 2003 redukus registracijan ohjandimed kändihe joudjaližeks, sen ližaks tegihe voib kävutada [[ročin kel'|ročin kelen]] kirjamid domennimes: å, ä, ö, ü, é. Domennimen registracii om lasktud kahtendel tazopindal, no maksmine voib ühteks vodeks vaiše.
 
 == Homaičendad ==
 <references />
