--- a/Rilovice.mw
+++ b/Rilovice.mw
@@ -11,7 +11,7 @@
 }}
 '''Rilovice''' ({{lang-pl|Ryłowice}} [rɨwɔˈvit͡sɛ]) om külä [[Pol'šanma]]n suvipäivnouzmas, [[Sventokšistan sodaveikund]]an päivnouzmas, sen Sambožec-gminas (kundas).
 
-Külän eläjiden lugu oli 143 ristitud 2007-ndes vodes. Matkad sodaveikundan [[Kel'ce]]-pälidnhasai om 72 km lodeheze.
+Külän eläjiden lugu oli 143 ristitud 2007-ndes vodes. Matkad sodaveikundan [[Kel'ce]]-pälidnhasai om 72 km lodeheze. Lähembaine lidn om [[Sandomir]] 16 km päivnouzmha.
 
 {{stub}}
 [[Kategorii:Pol'šanman küläd]]
