--- a/Rilovice.mw
+++ b/Rilovice.mw
@@ -13,6 +13,8 @@
 
 Külän eläjiden lugu oli 143 ristitud 2007-ndes vodes. Matkad sodaveikundan [[Kel'ce]]-pälidnhasai om 72 km lodeheze. Lähembaine lidn om [[Sandomir]] 16 km päivnouzmha.
 
+Vll 1975−1998 [[Tarnobžeg]]an sodaveikund oli olmas, i külä oli mülünu sihe.
+
 {{stub}}
 [[Kategorii:Pol'šanman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
