--- a/Rilovice.mw
+++ b/Rilovice.mw
@@ -11,9 +11,11 @@
 }}
 '''Rilovice''' ({{lang-pl|Ryłowice}} [rɨwɔˈvit͡sɛ]) om külä [[Pol'šanma]]n suvipäivnouzmas, [[Sventokšistan sodaveikund]]an päivnouzmas, sen Sambožec-gminas (kundas).
 
-Külän eläjiden lugu oli 143 ristitud 2007-ndes vodes. Matkad sodaveikundan [[Kel'ce]]-pälidnhasai om 72 km lodeheze. Lähembaine lidn om [[Sandomir]] 16 km päivnouzmha.
-
 Vll 1975−1998 [[Tarnobžeg]]an sodaveikund oli olmas, i külä oli mülünu sihe.
+
+Nimitadud pöudod da nitud ümbärtas küläd. Matkad sodaveikundan [[Kel'ce]]-pälidnhasai om 72 km lodeheze. Lähembaine lidn om [[Sandomir]] 16 km päivnouzmha, külä mülüb sen ümbrikho (''poväthä'').
+
+Külän eläjiden lugu oli 143 ristitud 2007-ndes vodes.
 
 {{stub}}
 [[Kategorii:Pol'šanman küläd]]
