--- a/8._reduku.mw
+++ b/8._reduku.mw
@@ -2,6 +2,9 @@
 '''8. reduku''' om voden 281-nz' päiv (282-nz' [[ližapäivvoz'|ližapäivvoziš]]) [[grigorianine kalendar'|grigorianižes kalendariš]]. Voden lophusai jäb 84 päiväd.
 
 == Sündnuded ==
+* [[1871]] — [[Ivan Puddubnii]] (kol. [[1949]]), venämalaine i nevondkundaline borcui zaporižžän kozakoiden rodul, cirkan atlet i artist, Venäman NFST:n arvostadud artist.
+* [[1873]] — [[Aleksei Ščusev]] (kol. [[1949]]), venälaine nevondkundaline arhitektor.
+* [[1888]] — [[Ernst Krečmer]] (kol. [[1964]]), saksalaine psihiatr i psiholog.
 * [[1890]] — [[Čistalöv Veniamin]] (kol. [[1939]]), [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] [[komilaižed|komilaine]] kirjutai, runokirjutai, opendai da kändai
 * [[1892]] — [[Cvetajeva Marina]] (kol. [[1941]]), venälaine i nevondkundaline runokirjutai da kändai
 * [[1948]] — [[Spenser Uinston Bolduin]], 3. [[Antigua da Barbud]]an päministr
