--- a/1949.mw
+++ b/1949.mw
@@ -1,19 +1,19 @@
 '''1949 (tuha ühesasadad nell'kümne ühesanz') voz'''' — järgeline voz', kudamb augotihe [[sobat]]al [[grigorianine kalendar'|grigorianižen kalendarin]] mödhe.
 
 == Sündnuded ==
-* [[12. viluku]] – [[Murakami Haruki|Haruki Murakami]], japonine prozan kirjutai
-* [[19. keväz'ku]] – [[Leont'jev Valerii|Valerii Leont'jev]], Nevondkundaližen Ühtištusen i Venäman estradan pajatai
-* [[15. sulaku]] – [[Pugačova Alla|Alla Pugačova]], Nevondkundaližen Ühtištusen i Venäman estradan pajatai
-* [[9. semendku]] – [[Džoel Billi|Billi Džoel]], amerikaine pianinon vändai, muzikankirjutai
-* [[18. kezaku]] – [[Kačin'skii Leh|Leh Kačin'skii]], oli Pol'šanman prezidentan (2005-2010)
-* [[22. kezaku]] – [[Strip Meril|Meril Strip]], amerikaine kinon i teatran aktris
-* [[31. eloku]] – [[Gir Ričard|Ričard Gir]], amerikaine kinon akt'or
-* [[25. sügüz'ku]] – [[Al'modovar Pedro|Pedro Al'modovar]], ispanine kinorežissör
-* [[3. kül'mku]] – [[Gradskii Aleksandr|Aleksandr Gradskii]], nevondkundaline i Venäman pajatai, muzikankirjutai
-* [[26. tal'vku]] – [[Bojarskii Mihail|Mihail Bojarskii]], Nevondkundaližen Ühtištusen i Venäman kinon da teatran akt'or, pajatai
+* [[12. viluku]] — [[Murakami Haruki|Haruki Murakami]], japonine prozan kirjutai
+* [[19. keväz'ku]] — [[Leont'jev Valerii|Valerii Leont'jev]], Nevondkundaližen Ühtištusen i Venäman estradan pajatai
+* [[15. sulaku]] — [[Pugačova Alla|Alla Pugačova]], Nevondkundaližen Ühtištusen i Venäman estradan pajatai
+* [[9. semendku]] — [[Džoel Billi|Billi Džoel]], amerikaine pianinon vändai, muzikankirjutai
+* [[18. kezaku]] — [[Kačin'skii Leh|Leh Kačin'skii]], oli Pol'šanman prezidentan (2005−2010)
+* [[22. kezaku]] — [[Strip Meril|Meril Strip]], amerikaine kinon i teatran aktris
+* [[31. eloku]] — [[Gir Ričard|Ričard Gir]], amerikaine kinon akt'or
+* [[25. sügüz'ku]] — [[Al'modovar Pedro|Pedro Al'modovar]], ispanine kinorežissör
+* [[3. kül'mku]] — [[Gradskii Aleksandr|Aleksandr Gradskii]], nevondkundaline i Venäman pajatai, muzikankirjutai
+* [[26. tal'vku]] — [[Bojarskii Mihail|Mihail Bojarskii]], Nevondkundaližen Ühtištusen i Venäman kinon da teatran akt'or, pajatai
 
 == Kolnuded ==
-* [[6. semendku]] – [[Meterlink Moris|Moris Meterlink]], bel'gine runokirjutai, dramaturg i filosof
+* [[6. semendku]] — [[Meterlink Moris|Moris Meterlink]], bel'gine runokirjutai, dramaturg i filosof
 
 {{stub}}
 [[Kategorii:1949| ]]
