--- a/.az.mw
+++ b/.az.mw
@@ -1,4 +1,7 @@
-'''.az''' om [[Azerbaidžan]]an [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 28. päiväl elokud.<ref>[http://iana.org/domains/root/db/az.html IANA — .az Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+[[Fail:Azlogo.png|thumb|right|250px|Domenan logotip]]
+'''.az''' om [[Azerbaidžan]]an [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 28. päiväl elokud<ref>[http://iana.org/domains/root/db/az.html IANA — .az Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2021 redukus kaik oli läz 38 tuhad saitoid .az-zonas.
+
+Registracii om lasktud kahtendel tazopindal, Azerbaidžanan rezidentoile vaiše. Domennimen arv om 20 [[azerbaidžanan manat|manatad]], mugoi-žo maksmine om kävutandan vodes.
 
 == Homaičendad ==
 <references />
@@ -6,6 +9,7 @@
 == Irdkosketused ==
 * [http://www.nic.az/ Domenan sait (''nic.az'', ohjandai om «IntraNS»).] {{ref-en}} {{ref-az}} {{ref-ru}}
 * [http://iana.org/domains/root/db/az.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.az}}
 
 {{CcTLD}}
 
