--- a/.az.mw
+++ b/.az.mw
@@ -1,7 +1,16 @@
 [[Fail:Azlogo.png|thumb|right|250px|Domenan logotip]]
 '''.az''' om [[Azerbaidžan]]an [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 28. päiväl elokud<ref>[http://iana.org/domains/root/db/az.html IANA — .az Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2021 redukus kaik oli läz 38 tuhad saitoid .az-zonas.
 
-Registracii om lasktud kahtendel tazopindal, Azerbaidžanan rezidentoile vaiše. Domennimen arv om 20 [[azerbaidžanan manat|manatad]], mugoi-žo maksmine om kävutandan vodes.
+Registracii om lasktud kahtendel tazopindal, Azerbaidžanan rezidentoile vaiše. Domennimen arv om 20 [[azerbaidžanan manat|manatad]], mugoi-žo maksmine om sen tehnižen pid'oitelendan vodes. Domenan eraz-se leviganduz om amerikaižes [[Arizon]]-štatas mugažo.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.gov.az''' — valdkundaližed organad
+* '''.com.az''' — kommertižed aluzkundad, korporacijad
+* '''.edu.az''' — tedon i opendusen aluzkundad
+* '''.org.az''' — kommertižetomad organizacijad
+* '''.info.az''' — informacižed saitad
+* '''.net.az''' — verkoiden provaiderad i organizacijad
+* '''.int.az''' — rahvahidenkeskeižed organizacijad.
 
 == Homaičendad ==
 <references />
