--- a/Pöudkülä.mw
+++ b/Pöudkülä.mw
@@ -3,7 +3,7 @@
  | Valdkund = Estinma
  | Eläjiden lugu = 27
  | Voz' = 2019-01-01
- | Pind =
+ | Pind = 0,5
  | Fail =
  | Pämez' =
  | Telefonkod = +372
@@ -11,11 +11,15 @@
 }}
 '''Pöudkülä''' ({{lang-et|Põlluküla}}) om külä [[Estinma]]n päivlaskmas, [[Sarenma]]-saren suvipäivnouzmaižel randal. Mülüb [[Saare-makund]]an Sarenma-volostihe.
 
+== Istorii ==
 Pertišton aluz om pandud 20. voz'sadal. Erigoittihe eländpunktaks lähižes Tinii-küläspäi (''Tõnija'') vl 1936.
 
-Vn 2011 Estinman rahvahanlugemižen mödhe külän eläjiden lugu oli 21 ristitud, vl 1998 — 27 ristitud.
-
 Amuine Tuulingumäe-kaumišt sijadase küläs. Tehtihe sen kaivandusid vll 1995−2000, kogoneb kahten aigan kaumišpäi: voded 500 EME — 50 meiden erad (raudaig, kaumuz 30 mehenke) i 450−600 m.e. (migracijan aig, 13 kaumad).
+
+== Geografijan andmused ==
+Külän koordinatad: 58°24′48″ N, 22°55′17″ E.
+
+Vn 2011 Estinman rahvahanlugemižen mödhe külän eläjiden lugu oli 21 ristitud, vl 1998 — 27 ristitud.
 
 == Homaičendad == 
 <references />
