--- a/Budu_Amado.mw
+++ b/Budu_Amado.mw
@@ -2,7 +2,9 @@
 | изображение = Amado Boudou en ejercicio de la presidencia.png
 | описание изображения = Amado Budu vn 2012 vilukus
 }}
-'''Amado Budu''' ({{lang-es|Amado Boudou}}; sünd. [[19. kül'mku]] [[1962]], [[Buenos Aires]], [[Argentin]]) om ranu [[Argentin]]an 35. varaprezidentan (10. tal'vku 2011 — 10. tal'vku 2015). Edel sidä radoi kaks' vot Argentinan ekonomikan ministran.
+'''Amado Budu''' ({{lang-es|Amado Boudou}} [aˈmaðo βuˈðu]; sünd. [[19. kül'mku]] [[1962]], [[Buenos Aires]], [[Argentin]]) om ranu [[Argentin]]an 35. varaprezidentan (10. tal'vku 2011 — 10. tal'vku 2015). Edel sidä radoi kaks' vot Argentinan ekonomikan ministran.
+
+Mez' om [[Hustisialistine partii|Hustisialistižen partijan]] ühtnijan vspäi 1995.
 
 Vn 2017 3. päiväl kül'mkud panihe Budud arestan alle rahoiden «puhtastandan» i reketan tagut. Käskuzkundaline azjan kaclend tuli lophu vn 2018 elokus, anttihe värnikale türmadandan viž vot i kümne kud radon valdkundradnikusil kel'donke. Budu sanui, miše hänen goluušin om politine pakitoituz.
 
