--- a/Sumeg.mw
+++ b/Sumeg.mw
@@ -1,10 +1,12 @@
 {{10000}}{{A10000}}
-[[Fail:Boulevard on Lenina Avenue in Barnaul.jpg|thumb|right|250px|Sumeg [[Barnaul]]as]]
+[[Fail:Boulevard on Lenina Avenue in Barnaul.jpg|thumb|right|250px|Sumeg [[Barnaul]]as, Venäma]]
 '''Sumeg''' om [[atmosferižed nägused|atmosferine näguz]], [[vezi|veden]] äjüz [[il'm]]as, konz [[vezipuru]]n kondensacijan mučuižed produktad tegesoiš. Vezipuru kändase [[jä]]n kristalloikš lämudel −10 C° da sen alemba.
 
-Sumegen aigan il'man [[relätivine nepsuz]] om ülemb mi 85% i läz sadad procentoid paksus kuivman päl. Pakaižen aigan eländpunktoiš sumeg voib olda penembanke relätiviženke nepsudenke (50% da sen alemba) redustandan tagut, sidä kesken LEK:oiden i likutimiden vezipuruil. Sumegen hätkeližuz oleleb severz'-se časuid vai lühüdamb edel päidust, vai severz'-se päivesid vilusän aigan.
+Sumegen aigan il'man [[relätivine nepsuz]] om ülemb mi 85 % i läz sadad procentoid paksus kuivman päl. Pakaižen aigan eländpunktoiš sumeg voib olda penembanke relätiviženke nepsudenke (50% da sen alemba) redustandan tagut, sidä kesken LEK:oiden i likutimiden vezipuruil. Sumegen hätkeližuz oleleb severz'-se časuid vai lühüdamb edel päidust, vai severz'-se päivesid vilusän aigan.
 
-Sumeg telustab transportan radod, aviacijan päazjan, i sen endustuz om tarbhaine.
+Sumeg telustab transportan radod, aviacijan päazjan, i sen endustuz om tarbhaine. Ku nägubuz poleneb 200 metrhasai da sen penemba, ka lugetas sumeged lujaks. Venäman territorijal sumeg oleleb kaikiš paksumba suvižiš tün'valdmerižiš portoiš, päividen koumandeshesai vodes. Himijan kacegespäi sumeg om aerozol' nozolanke alusenke, kolloidine segoitez.
+
+Kävutadas ratud sumegid tedoidusiš, himižes tegimištos, lämuztehnikas, toradamha kazmusiden travijoid.
 
 == Homaičendad ==
 <references />
