--- a/Tohesižed_kirjeižed.mw
+++ b/Tohesižed_kirjeižed.mw
@@ -1,7 +1,11 @@
-[[Fail:Berest gramata n 155.jpg|thumb|right|250px|Tohesine kirjeine nomer 155]]
-'''Tohesižed kirjeižed''' ({{lang-ru|берестяные грамоты}}) oma kirjeižed i kirjutesed tohel — [[koiv]]un [[kor'|korel]]. Ned oma [[Amuine Venä|Amuižen Venän]] kirjkelen muštnikad, sätihe 11.—15. voz'sadoil, edel odvan [[bumag]]an levitandad. Tetas enamba mi tuhas mugoižid kirjeižid, kaik ned oma nomeruidud.
+[[Fail:Berest gramata n 155.jpg|thumb|right|250px|Tohesine kirjeine nomer 155, Valdkundaližen istorižen muzejan keradusespäi (Moskv)]]
+'''Tohesižed kirjeižed''' ({{lang-ru|берестяные грамоты}}) oma kirjeižed i kirjutesed tohel — [[koiv]]un [[kor'|korel]]. Ned oma [[Venä]]n kirjkelen muštnikad, sätihe 11.—15. voz'sadoil, edel odvan [[bumag]]an levitandad. Tetas enamba mi tuhas kaks'sadas mugoižid kirjeižid, kaik ned oma nomeruidud.
 
 Tobmad tohesižiš kirjeižišpäi (enamba tuhad) oma löutud [[Sur' Uz'lidn|Sures Uz'lidnas]]. Löutihe enamba 10 kirješt [[Vanh Russ]]-, [[Toržok]]- i [[Smolensk]]-lidnoiden kaivandusiš. Severz'-se kirjeižid oma sadud Vaugedvenäman i Ukrainan lidnoiš. Läz kaik artefaktad oma [[amuižvenän kel'|amuižvenäkel'žed]], uz'lidnan paginal tobjimalaz, om vähän kirjeižid jumalanpertin slavižel kelel i toižil kelil.
+
+Kirjeižed tohel oma istorižed dokumentad, ned sanudas ristitkundan istorijas i muupäiväližes elos, purtked [[slavižed keled|päivnouzmslavižiden keliden]] istorijas.
+
+Kirjkel' tohel om tetab mail'man toižiden-ki rahvahiden rivel.
 
 == Irdkosketused ==
 * [http://gramoty.ru/ Venän kaik tohesižed kirjeižed ''gramoty.ru''-saital.] {{ref-ru}}
