--- a/Tohesižed_kirjeižed.mw
+++ b/Tohesižed_kirjeižed.mw
@@ -3,7 +3,7 @@
 
 Tobmad tohesižiš kirjeižišpäi (enamba tuhad) oma löutud [[Sur' Uz'lidn|Sures Uz'lidnas]]. Löutihe enamba 10 kirješt [[Vanh Russ]]-, [[Toržok]]- i [[Smolensk]]-lidnoiden kaivandusiš. Severz'-se kirjeižid oma sadud Vaugedvenäman i Ukrainan lidnoiš. Läz kaik artefaktad oma [[amuižvenän kel'|amuižvenäkel'žed]], uz'lidnan paginal tobjimalaz, om vähän kirjeižid jumalanpertin slavižel kelel i toižil kelil.
 
-Kirjeižed tohel oma istorižed dokumentad, ned sanudas ristitkundan istorijas i muupäiväližes elos, purtked [[slavižed keled|päivnouzmslavižiden keliden]] istorijas.
+Kirjeižed tohel oma istorižed dokumentad, ned sanudas ristitkundan istorijas i muupäiväližes elos, oma purtked [[slavižed keled|päivnouzmslavižiden keliden]] istorijas.
 
 Kirjkel' tohel om tetab mail'man toižiden-ki rahvahiden rivel.
 
