--- a/Tatarsk.mw
+++ b/Tatarsk.mw
@@ -1,25 +1,25 @@
 {{Eländpunkt
  | Nimi = Tatarsk<br />Татарск
- | Lidnanznam = RUS Tatarsk (Novosibirsk oblast) COA.jpg
+ | Lidnanznam = Tatarsk COA (2010).gif
  | Flag = Flag of Tatarsk (Novosibirsk oblast).png
  | Lidnanznam text = Tatarskan lidnanznam
  | Flag text = Tatarskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 23,956
- | Voz' = 2017
+ | Eläjiden lugu = 23,282
+ | Voz' = 2021
  | Pind = 80.09
- | Fail = Татарск. Ул. Ленина 2.jpg
- | Pämez' = Aleksandr Švedov<br />(tal'vku 2005—)
+ | Fail = Татарск (вид из поезда),3.jpg
+ | Pämez' = Aleksei Sivolapenko<br />(keväz'ku 2020—)
  | Telefonkod = +7-38364-xx-xxx
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Tatarsk''' ({{lang-ru|Татарск}}) om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an päivlaskmas. Se om [[Tatarskan rajon]]an administrativine keskuz.
+'''Tatarsk''' ({{lang-ru|Тата́рск}}) om [[Venäma]]n lidn da lidnankund [[Novosibirskan agj]]an päivlaskmas. Se om [[Tatarskan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1894 kuti ''Tatarskai-raudtestancii'' ({{lang-ru|Татарская}}) žilonke senno sauvomha da holitamha [[Transsib]]ad i sirdnikoiden Venäman imperijan evropižes palaspäi bazaks. Nimitihe lähižen ''Tatarkankülän'' ({{lang-ru|деревня Татарка}}) mödhe, sijazihe kahtes virstas da oli pandud 18. voz'sadal. Žilo sai lidnan statusad vn 1911 27. päiväl vilukud. Vll 1912−1914 saudihe Kulundan magistralid suvipäivnouzmha vemha villäd ajaden, kätihe Tatarskad raudtesol'meks.
 
-Lidn šingotase raudten edheotandoil (vagonoiden kohenduzdepo, raudten distancii) i sömtegimištol (leibänkombinat, villänelevator, kuivan maidon tegim).
+Tatarsk šingotase raudten edheotandoil (vagonoiden kohenduzdepo, raudten distancii) i sömtegimištol (leibänkombinat, villänelevator, kuivan maidon tegim).
 
 == Geografijan andmused ==
 Lidn sijadase 105 m ü.m.t. keskmäižel korktusel. Matkad [[Novosibirsk]]hasai om 443 km päivnouzmha orhal, 473 km avtotedme vai raudtedme. Lähembaine lidn om [[Kalačinsk]] (Omskan agj) 90 km päivlaskmha Transsibal vai avtotedme. «Irtiš»-avtote (R-254) om lidnan suviröunaks.
@@ -27,9 +27,25 @@ Lidn sijadase 105 m ü.m.t. keskmäižel korktusel. Matkad [[Novosibirsk]]hasai 
 Tatarsk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 217 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 29..30 tuhad eläjid vll 1959−1998 (30 893 eläjad vl 1979). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken pühäpert' om saudud vll 1994−2001.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 217 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 29..30 tuhad eläjid vll 1959−1998 (30 893 eläjad vl 1979).
 
-Tatarskan politehnine i pedagogine kolledžad oma professionaližen opendusen aluzkundoikš.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken jumalanpert'<ref>[http://sobory.ru/geo/locat/12933 Tatarskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 1994−2001.
+
+Tatarskan politehnine<ref>[http://tatpk.ru/ Tatarskan politehnižen kolledžan sait (''tatpk.ru'').] {{ref-ru}}</ref> i pedagogine<ref>[http://www.pedcollege-tatarsk.edusite.ru/ Tatarskan pedagogižen kolledžan sait (''pedcollege-tatarsk.edusite.ru'').] {{ref-ru}}</ref> kolledžad oma professionaližen opendusen aluzkundoikš.
+
+Edeline lidnan pämez' om Aleksandr Švedov (tal'vku 2005 — viluku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Татарск Памятник Труженникам села посвящается.jpg|Muštnik külätahondan radnikoile (2009),<br />rajonan 80-voččen jubilejale
+Татарск. Храм Покрова Пресвятой Богородицы.jpg|Jumalanmaman Katken pühäpert', vn 2009 nägu
+Поезд в музее г.Татарска 04.JPG|Puruvedim lidnan muzejas (2009)
+Татарск Куранты.jpg|Čuhunduz časuidenke Leninan irdal (2009)
+Станция Татарская (вокзал),2.jpg|''Tatarskaja''-päraudtestancijan sauvuz vl 2021
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admtatarsk.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admtatarsk.nso.ru'').] {{ref-ru}}
