*Empty MediaWiki Message*

--- a/Tatarsk.mw
+++ b/Tatarsk.mw
@@ -37,8 +37,8 @@ Edeline lidnan pämez' om Aleksandr Švedov (tal'vku 2005 — viluku 2020).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Татарск Памятник Труженникам села посвящается.jpg|Muštnik külätahondan radnikoile (2009),<br />rajonan 80-voččen jubilejale
-Татарск. Храм Покрова Пресвятой Богородицы.jpg|Jumalanmaman Katken pühäpert', vn 2009 nägu
+Татарск Памятник Труженникам села посвящается.jpg|Muštnik külätahondan radnikoile (2009),<br />rajonan 80-voččele jubilejale
+Татарск. Храм Покрова Пресвятой Богородицы.jpg|Jumalanmaman Katken jumalanpert', vn 2009 nägu
 Поезд в музее г.Татарска 04.JPG|Puruvedim lidnan muzejas (2009)
 Татарск Куранты.jpg|Čuhunduz časuidenke Leninan irdal (2009)
 Станция Татарская (вокзал),2.jpg|''Tatarskaja''-päraudtestancijan sauvuz vl 2021
