*Empty MediaWiki Message*

--- a/Tatarsk.mw
+++ b/Tatarsk.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1894 kuti ''Tatarskai-raudtestancii'' ({{lang-ru|Татарская}}) žilonke senno sauvomha da holitamha [[Transsib]]ad i sirdnikoiden Venäman imperijan evropižes palaspäi bazaks. Nimitihe lähižen ''Tatarkankülän'' ({{lang-ru|деревня Татарка}}) mödhe, sijazihe kahtes virstas da oli pandud 18. voz'sadal. Žilo sai lidnan statusad vn 1911 27. päiväl vilukud. Vll 1912−1914 saudihe Kulundan magistralid suvipäivnouzmha vemha villäd ajaden, kätihe Tatarskad raudtesol'meks.
 
-Tatarsk šingotase raudten edheotandoil (vagonoiden kohenduzdepo, raudten distancii) i sömtegimištol (leibänkombinat, villänelevator, kuivan maidon tegim).
+Tatarsk šingotase raudten edheotandoil (vagonoiden kohenduzdepo, raudten distancii) i sömtegimištol (leibänkombinat, villänelevator, kuivan [[maid]]on tegim).
 
 == Geografijan andmused ==
 Lidn sijadase 105 m ü.m.t. keskmäižel korktusel. Matkad [[Novosibirsk]]hasai om 443 km päivnouzmha orhal, 473 km avtotedme vai raudtedme. Lähembaine lidn om [[Kalačinsk]] (Omskan agj) 90 km päivlaskmha Transsibal vai avtotedme. «Irtiš»-avtote (R-254) om lidnan suviröunaks.
@@ -41,7 +41,7 @@ Edeline lidnan pämez' om Aleksandr Švedov (tal'vku 2005 — viluku 2020).
 Татарск. Храм Покрова Пресвятой Богородицы.jpg|Jumalanmaman Katken jumalanpert', vn 2009 nägu
 Поезд в музее г.Татарска 04.JPG|Puruvedim lidnan muzejas (2009)
 Татарск Куранты.jpg|Čuhunduz časuidenke Leninan irdal (2009)
-Станция Татарская (вокзал),2.jpg|''Tatarskaja''-päraudtestancijan sauvuz vl 2021
+Станция Татарская (вокзал),2.jpg|''Tatarskai''-päraudtestancijan sauvuz vl 2021
 </gallery>
 
 == Homaičendad ==
