/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -11,6 +11,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 <blockquote>
 * ''Ala pagiže min tedad, a teda min pagižed.''
 * ''Ei sur' sana sud haugoi.''
+* ''Paha kel' pahan i pagižeb.''
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sanub, kuti haugol pähä iškeb.''
